--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #8395a7;
 }
 
 code {
@@ -12,6 +13,12 @@ code {
     monospace;
 }
 
-@import url(https://cdn.rawgit.com/kattergil/NotoSerifKR-Web/76eb9ebf/stylesheet/NotoSerif-Web.css);
+@import url('https://cdn.rawgit.com/kattergil/NotoSerifKR-Web/76eb9ebf/stylesheet/NotoSerif-Web.css');
 /* NotoSerifKR-Web
  글씨체 다운로드 url */
+@import url('http://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css');
+/* spoqa-han-sans 글꼴 */
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300');
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+/* noto sans kr 'Noto Sans KR' */
