--- a/frontend/src/components/TimeLine.css
+++ b/frontend/src/components/TimeLine.css
@@ -29,7 +29,7 @@ h2 {
 .timeline_date {
   width: 91vw;
   /* color: #333333; */
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   font-size: 24px;
   display: flex;
   flex-direction: row;
@@ -54,7 +54,8 @@ h2 {
   flex: 1;
   align-self: center;
   align-items: center;
-  font-size: 15px;
+  text-align: center;
+  font-size: 18px;
   white-space: nowrap;
   display: flex;
   flex-direction: column;
@@ -74,6 +75,7 @@ h2 {
   filter: invert(100%);
 }
 
+/* 활성화 된 타임라인 아이템 */
 .active {
   opacity: 1 !important;
   font-weight: 600 !important;
@@ -98,9 +100,16 @@ h2 {
   .timeline_date {
     font-size: 14px;
     font-weight: bolder;
+    margin-bottom: 15px;
   }
   .timeline > ol {
     font-size: 9px;
     font-weight: 200;
+    letter-spacing: -0.3px;
+  }
+
+  .active {
+    letter-spacing: -0.7px !important;
+    font-weight: 700 !important;
   }
 }
