--- a/frontend/src/components/NavTop.css
+++ b/frontend/src/components/NavTop.css
@@ -68,3 +68,21 @@
   /* padding-bottom: 3px; */
   /* border-bottom: solid 1px gray; */
 }
+
+@media screen and (max-width: 768px) {
+  .nav_top {
+    display: flex;
+    flex-direction: column-reverse;
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    top: unset;
+    /* right: 15px; */
+    height: 42px;
+    background-color: #c8d6e5;
+
+    border-radius: 20px;
+    /* width: auto; */
+    z-index: 999;
+  }
+}
