--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -8,32 +8,78 @@
 }
 
 .portfolio_title {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
   text-align: center;
+  font-size: 3rem;
 }
 
 .portfolio_media_wrapper {
   width: 90vw;
   display: flex;
-  flex-flow: row wrap;
-  /* align-items: center;
-  align-content: center; */
+  flex-flow: row-reverse wrap;
+  align-items: center;
+  align-content: center;
   justify-content: center;
 }
 
-.portfolio_media_wrapper > img {
-  /* align-self: center;
-  align-items: center;
-  align-content: center; */
-  width: 25%;
-  min-width: 200px;
-  height: auto;
-  margin: 5px;
+/* 메인이미지 */
+.portfolio_media_main {
+  width: 45vw;
+  height: 35vh;
+  max-height: 1000px;
+  max-width: 800px;
+  min-width: 330px;
+  margin: 2px 25px;
+  justify-content: center;
+  justify-self: center;
+  justify-items: center;
+}
+.portfolio_media_main > video,
+.portfolio_media_main > img {
+  width: 100%;
+  height: 100%;
+  transition: height 0.5s ease;
+  border-radius: 6px;
+  object-fit: scale-down;
 }
 
-.portfolio_text_wrapper {
+/* 작은 썸네일들 모음 */
+.portfolio_media_thumbnail_wrapper {
+  width: 40%;
+  max-width: 700px;
+  min-width: 330px;
+  margin: 10px 25px;
+  display: flex;
+  flex-flow: row wrap;
+}
+.portfolio_media_thumbnail_wrapper > video,
+.portfolio_media_thumbnail_wrapper > img {
+  width: 23%;
+  /* margin: 0 5px; */
+  opacity: 0.5;
+  transition: opacity 0.5s;
+  margin: 2% 0;
+  padding: 0 2%;
+  border-radius: 8px;
+  height: auto;
+  object-fit: scale-down;
+}
+.portfolio_media_thumbnail_wrapper > video:hover,
+.portfolio_media_thumbnail_wrapper > img:hover {
+  opacity: 1;
+}
+
+.active_thumbnail {
+  opacity: 1 !important;
+}
+
+.portfolio_text_section {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 85vw;
+  max-width: 1200px;
+  margin: 30px 10px;
 }
 
 .portfolio_text_wrapper {
@@ -43,11 +89,46 @@
 
 .portfolio_text_title {
   white-space: nowrap;
+  margin: 30px 30px;
 }
 
 .portfolio_text_content {
-  font-size: 20px;
+  font-size: 18px;
+  margin: 30px 30px;
 }
 
 @media screen and (max-width: 768px) {
+  .portfolio_media_wrapper {
+    width: 85vw;
+    flex-flow: column wrap;
+  }
+  .portfolio_media_main {
+    height: 25vh;
+  }
+  .portfolio_media_thumbnail_wrapper {
+    width: 50%;
+    max-width: 700px;
+    min-width: 330px;
+    margin: 5px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .portfolio_text_section {
+    width: 95vw;
+  }
+  .portfolio_text_wrapper {
+    flex-direction: column;
+  }
+
+  .portfolio_text_title {
+    font-size: 22px;
+    margin: 10px 30px;
+  }
+
+  .portfolio_text_content {
+    font-size: 14px;
+    font-weight: 400;
+    margin: 10px 30px;
+  }
 }
