--- a/frontend/src/components/TimeLine.css
+++ b/frontend/src/components/TimeLine.css
@@ -52,7 +52,7 @@ h2 {
 
   height: 10vh;
   width: 93vw;
-  margin: auto;
+  padding: 20px 0;
   /* background-color: gray; */
 }
 
@@ -117,6 +117,7 @@ h2 {
   }
   .timeline {
     width: 98vw;
+    padding: 5px 0;
   }
   .timeline_date {
     font-size: 14px;
