--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -52,16 +52,20 @@
   margin: 10px 25px;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  align-content: flex-start;
 }
 .portfolio_media_thumbnail_wrapper > video,
 .portfolio_media_thumbnail_wrapper > img {
   width: 23%;
+  flex: 1;
   /* margin: 0 5px; */
   opacity: 0.5;
   transition: opacity 0.5s;
-  margin: 2% 0;
-  padding: 0 2%;
-  border-radius: 8px;
+  margin: 2% 1%;
+  padding: 2% 2%;
+  border: solid 0.5px whitesmoke;
+  border-radius: 4px;
   height: auto;
   object-fit: scale-down;
 }
