--- a/frontend/src/components/TimeLine.css
+++ b/frontend/src/components/TimeLine.css
@@ -51,8 +51,9 @@ h2 {
   align-self: center;
 
   height: 10vh;
-  width: 93vw;
-  padding: 20px 0;
+  /* width: 100vw; */
+  /* margin: 0px 30px; */
+  padding: 1% 1.5%;
   /* background-color: gray; */
 }
 
@@ -102,9 +103,17 @@ h2 {
 
 .contents_wrapper {
   opacity: 0;
-  position: relative;
   margin-top: 150px;
   transition: opacity 2.5s ease, margin 1.5s;
+}
+
+.anchor {
+  height: 1px;
+  width: 90%;
+  margin: 0;
+  padding: 0;
+  /* border: solid 2px white; */
+  z-index: 99999;
 }
 
 /* 반응형 */
@@ -116,8 +125,9 @@ h2 {
     /* margin-bottom: 15px; */
   }
   .timeline {
-    width: 98vw;
-    padding: 5px 0;
+    /* width: 95vw; */
+    padding: 5px 10px;
+    /* margin: 0px 10px; */
   }
   .timeline_date {
     font-size: 14px;
