페이지 ui 변경

--- a/frontend/src/components/TimeLine.css
+++ b/frontend/src/components/TimeLine.css
@@ -55,6 +55,7 @@ h2 {
   /* margin: 0px 30px; */
   padding: 1% 1.5%;
   /* background-color: gray; */
+  /* opacity: 0.5; */
 }
 
 .timeline > ol {
