--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -27,6 +27,8 @@
   justify-content: center;
   justify-self: center;
   justify-items: center;
+  align-items: flex-start;
+  /* align-content: center; */
   /* background-color: blueviolet; */
 }
 /* 포트폴리오 미디어 */
@@ -111,14 +113,17 @@
 
 /* 포트폴리오 이미지, 비디오에 대한 설명 */
 .portfolio_media_desc {
-  width: 15vw;
-  font-size: 1.5rem;
+  width: 20vw;
+  min-width: 200px;
+  font-size: 1rem;
   font-weight: 400;
   /* text-align: center; */
-  padding: 2% 2% 2% 3%;
-  margin: 4% 60px 4% 10px;
-  border-radius: 30px;
-  background-color: rgba(116, 114, 114, 0.432);
+  height: auto;
+  padding: 3% 3% 3% 3%;
+  margin: 12% 60px 13% 10px;
+  border-radius: 10px;
+  word-break: keep-all;
+  background-color: rgba(105, 105, 105, 0.3);
 }
 
 .portfolio_text_section {
@@ -139,12 +144,13 @@
 .portfolio_text_title {
   white-space: nowrap;
   margin: 30px 30px;
+  color: #fffef2e7;
 }
 
 .portfolio_text_content {
   font-size: 18px;
   margin: 30px 30px;
-  color: #fffef2e7;
+
   font-weight: 400;
   padding-top: 5px;
   /* word-break: break-all; */
@@ -157,7 +163,7 @@
 
 .portfolio_text_content > h2 > a {
   text-decoration: none;
-  color: #fffef2e7;
+  color: aliceblue;
 }
 .portfolio_text_content > span {
   font-size: 16px;
