--- a/frontend/src/components/TimeLine.css
+++ b/frontend/src/components/TimeLine.css
@@ -55,7 +55,7 @@ h2 {
   /* margin: 0px 30px; */
   padding: 1% 1.5%;
   /* background-color: gray; */
-  /* opacity: 0.5; */
+  opacity: 0.95;
 }
 
 .timeline > ol {
