--- a/frontend/src/components/MainContents.css
+++ b/frontend/src/components/MainContents.css
@@ -1,5 +1,11 @@
+:root {
+  --var-bg-color: #ffffff;
+  --var-first-bg-color: #c0d5f1;
+}
+
 #main_contents {
-  background-color: #ecf0f1;
+  /* background-color: #ecf0f1; */
+  background-color: var(--var-first-bg-color);
   -webkit-transition: background 1.5s;
   -moz-transition: background-color 1.5s;
   -ms-transition: background-color 1.5s;
@@ -11,7 +17,8 @@
 }
 
 .timeline_bg {
-  background-color: #454f5d !important;
+  background-color: var(--var-bg-color) !important;
+  /* background-color: #454f5d !important; */
   /* background-color: black !important; */
 }
 
@@ -20,15 +27,15 @@
   position: fixed;
   max-height: 30px;
   width: 8px;
-  background-color: #ecf0f1;
+  background-color: var(--var-bg-color);
 }
 ::-webkit-scrollbar-button {
   display: none;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #454f5d;
+  background-color: rgba(32, 148, 250, 0.83);
   border-radius: 6px;
-  border: 2px solid #ecf0f1;
+  border: 2px solid var(--var-bg-color);
 }
 
 ::-webkit-scrollbar-track {
