--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -4,6 +4,7 @@
   align-items: center;
   align-content: center;
   align-self: center;
+  margin: 20px 0;
 }
 
 .portfolio_title {
@@ -113,38 +114,43 @@
   margin: 30px;
   border-radius: 10px;
   word-break: keep-all;
-  background-color: rgba(105, 105, 105, 0.3);
+  background-color: rgba(155, 155, 155, 0.2);
 }
 
 .portfolio_text_section {
-  background-color: rgba(7, 7, 20, 0.671);
-
+  background-color: rgba(32, 148, 250, 0.83);
   display: flex;
   flex-direction: column;
-  /* width: 100vw; */
-  padding: 5vw 15vw;
-  /* max-width: 1200px; */
-  margin: 0px 0px;
+  /* width: calc(60vw - 3px); */
+  width: 60vw;
+  padding: 10vw 20vw;
+  transform: skewY(-4deg);
 }
 
 .portfolio_text_wrapper {
+  background-color: white;
+  margin: -1px 0px;
   display: flex;
   flex-direction: row;
   vertical-align: super;
+  transform: skewY(4deg);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 2px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio_text_title {
   white-space: nowrap;
-  font-weight: 400;
+  font-weight: 500;
   margin: 30px 30px;
-  color: #fffef2e7;
+  /* color: #ffffff; */
+  color: black;
 }
 
 .portfolio_text_content {
   font-size: 18px;
   margin: 30px 30px;
-
-  font-weight: 300;
+  /* color: white; */
+  color: black;
+  font-weight: 400;
   padding-top: 5px;
   /* word-break: break-all; */
 }
@@ -152,15 +158,16 @@
   margin: unset;
   padding: unset;
   line-height: 3rem;
+  /* color: black; */
 }
 
 .portfolio_text_content > h2 > a {
   text-decoration: none;
-  color: aliceblue;
+  color: black;
 }
 .portfolio_text_content > span {
   font-size: 16px;
-  font-weight: 200;
+  font-weight: 300;
   display: inline-block;
   word-break: keep-all !important;
   margin: unset;
@@ -222,9 +229,12 @@
   }
 
   .portfolio_text_section {
-    /* width: 95vw; */
-    margin: 40px 0px;
-    padding: 0 0;
+    width: 96vw;
+    margin: 50px 0px;
+    padding: 10vw 2vw;
+    /* width: 100vw; */
+
+    /* padding: 5vw 5vw; */
   }
   .portfolio_text_wrapper {
     flex-direction: column;
@@ -237,8 +247,9 @@
 
   .portfolio_text_content {
     font-size: 14px;
-    font-weight: 200;
+    /* font-weight: 200; */
     margin: 10px 30px;
+    padding-top: 0px;
   }
   .portfolio_text_content > span {
     font-size: 12px;
