--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -46,7 +46,7 @@
   height: 100%;
   transition: height 0.5s ease;
   border-radius: 4px;
-
+  cursor: pointer;
   object-fit: scale-down;
 }
 
@@ -78,12 +78,23 @@
 
   /* background-color: coral; */
 }
-.portfolio_media_thumbnail_wrapper > video,
-.portfolio_media_thumbnail_wrapper > img {
-  /* max-width: 4vw; */
+
+.portfolio_media_thumbnail_wrapper > div {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.portfolio_media_thumbnail_wrapper > div > span {
+  font-size: 0.6rem;
+  text-align: center;
+  font-weight: 400;
+}
+
+.portfolio_media_thumbnail_wrapper > div > img,
+.portfolio_media_thumbnail_wrapper > div > video {
+  cursor: pointer;
   max-height: 4.5vw;
-  /* flex: 1; */
-  /* margin: 0 5px; */
   opacity: 0.5;
   transition: opacity 0.5s;
   margin: 5px;
@@ -221,8 +232,8 @@
     border-radius: 5px;
   }
 
-  .portfolio_media_thumbnail_wrapper > video,
-  .portfolio_media_thumbnail_wrapper > img {
+  .portfolio_media_thumbnail_wrapper > div > img,
+  .portfolio_media_thumbnail_wrapper > div > video {
     /* width: 23%; */
     max-height: 8vh;
     opacity: 0.5;
