--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -238,7 +238,7 @@
     max-height: 8vh;
     opacity: 0.5;
     transition: opacity 0.5s;
-    border: solid 0.5px whitesmoke;
+    border: solid 0.5px var(--var-point-color);
     border-radius: 4px;
     height: auto;
     object-fit: scale-down;
@@ -246,6 +246,11 @@
   .portfolio_title {
     margin-bottom: 1rem;
     font-size: 2.5rem;
+  }
+
+  .portfolio_text_content > h2 > div {
+    font-size: 1rem;
+    margin-top: -55px;
   }
 
   .portfolio_text_section {
