--- a/frontend/src/components/TimeLine/TimelineItem.css
+++ b/frontend/src/components/TimeLine/TimelineItem.css
@@ -135,8 +135,19 @@
   flex-direction: column;
   /* width: calc(60vw - 3px); */
   width: 60vw;
-  padding: 10vw 20vw;
-  transform: skewY(-4deg);
+  padding: 5vw 20vw;
+  transform: skewY(-3deg);
+}
+
+.top_article {
+  /* background-color: unset !important; */
+  margin-top: 5%;
+  margin-bottom: 3%;
+}
+
+.bottom_article {
+  margin-top: 3%;
+  margin-bottom: 5%;
 }
 
 .portfolio_text_wrapper {
@@ -145,7 +156,7 @@
   display: flex;
   flex-direction: row;
   vertical-align: super;
-  transform: skewY(4deg);
+  transform: skewY(3deg);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 2px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -165,7 +176,7 @@
   font-weight: 400;
   padding-top: 5px;
   /* white-space: pre; */
-  /* word-break: break-all; */
+  word-break: keep-all;
 }
 .portfolio_text_content > h2 {
   margin: unset;
